// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graph DataProcessor getTimeSeries from LegacyResponseData Should return a new series for each field 1`] = `
[
  TimeSeries {
    "alias": "Value",
    "aliasEscaped": "Value",
    "allIsNull": undefined,
    "allIsZero": undefined,
    "bars": {
      "fillColor": "#7EB26D",
    },
    "color": "#7EB26D",
    "dashes": undefined,
    "dataFrameIndex": 0,
    "datapoints": [
      [
        1,
        1001,
      ],
      [
        2,
        1002,
      ],
      [
        3,
        1003,
      ],
    ],
    "decimals": undefined,
    "fieldIndex": 1,
    "fillBelowTo": undefined,
    "flotpairs": undefined,
    "hasMsResolution": false,
    "hiddenSeries": undefined,
    "hideTooltip": undefined,
    "id": "Value",
    "isOutsideRange": undefined,
    "label": "Value",
    "legend": true,
    "lines": undefined,
    "nullPointMode": undefined,
    "points": undefined,
    "stack": undefined,
    "stats": {},
    "transform": undefined,
    "unit": "watt",
    "valueFormater": [Function],
    "yaxis": undefined,
    "zindex": undefined,
  },
  TimeSeries {
    "alias": "table_data v1",
    "aliasEscaped": "table_data v1",
    "allIsNull": undefined,
    "allIsZero": undefined,
    "bars": {
      "fillColor": "#EAB839",
    },
    "color": "#EAB839",
    "dashes": undefined,
    "dataFrameIndex": 1,
    "datapoints": [
      [
        0.1,
        1001,
      ],
      [
        0.2,
        1002,
      ],
      [
        0.3,
        1003,
      ],
    ],
    "decimals": undefined,
    "fieldIndex": 1,
    "fillBelowTo": undefined,
    "flotpairs": undefined,
    "hasMsResolution": false,
    "hiddenSeries": undefined,
    "hideTooltip": undefined,
    "id": "table_data v1",
    "isOutsideRange": undefined,
    "label": "table_data v1",
    "legend": true,
    "lines": undefined,
    "nullPointMode": undefined,
    "points": undefined,
    "stack": undefined,
    "stats": {},
    "transform": undefined,
    "unit": "ohm",
    "valueFormater": [Function],
    "yaxis": undefined,
    "zindex": undefined,
  },
  TimeSeries {
    "alias": "table_data v2",
    "aliasEscaped": "table_data v2",
    "allIsNull": undefined,
    "allIsZero": undefined,
    "bars": {
      "fillColor": "#6ED0E0",
    },
    "color": "#6ED0E0",
    "dashes": undefined,
    "dataFrameIndex": 1,
    "datapoints": [
      [
        1.1,
        1001,
      ],
      [
        2.2,
        1002,
      ],
      [
        3.3,
        1003,
      ],
    ],
    "decimals": undefined,
    "fieldIndex": 2,
    "fillBelowTo": undefined,
    "flotpairs": undefined,
    "hasMsResolution": false,
    "hiddenSeries": undefined,
    "hideTooltip": undefined,
    "id": "table_data v2",
    "isOutsideRange": undefined,
    "label": "table_data v2",
    "legend": true,
    "lines": undefined,
    "nullPointMode": undefined,
    "points": undefined,
    "stack": undefined,
    "stats": {},
    "transform": undefined,
    "unit": undefined,
    "valueFormater": [Function],
    "yaxis": undefined,
    "zindex": undefined,
  },
  TimeSeries {
    "alias": "series v1",
    "aliasEscaped": "series v1",
    "allIsNull": undefined,
    "allIsZero": undefined,
    "bars": {
      "fillColor": "#EF843C",
    },
    "color": "#EF843C",
    "dashes": undefined,
    "dataFrameIndex": 2,
    "datapoints": [
      [
        0.1,
        1001,
      ],
      [
        0.2,
        1002,
      ],
      [
        0.3,
        1003,
      ],
    ],
    "decimals": undefined,
    "fieldIndex": 0,
    "fillBelowTo": undefined,
    "flotpairs": undefined,
    "hasMsResolution": false,
    "hiddenSeries": undefined,
    "hideTooltip": undefined,
    "id": "series v1",
    "isOutsideRange": undefined,
    "label": "series v1",
    "legend": true,
    "lines": undefined,
    "nullPointMode": undefined,
    "points": undefined,
    "stack": undefined,
    "stats": {},
    "transform": undefined,
    "unit": undefined,
    "valueFormater": [Function],
    "yaxis": undefined,
    "zindex": undefined,
  },
  TimeSeries {
    "alias": "series v2",
    "aliasEscaped": "series v2",
    "allIsNull": undefined,
    "allIsZero": undefined,
    "bars": {
      "fillColor": "#E24D42",
    },
    "color": "#E24D42",
    "dashes": undefined,
    "dataFrameIndex": 2,
    "datapoints": [
      [
        1.1,
        1001,
      ],
      [
        2.2,
        1002,
      ],
      [
        3.3,
        1003,
      ],
    ],
    "decimals": undefined,
    "fieldIndex": 1,
    "fillBelowTo": undefined,
    "flotpairs": undefined,
    "hasMsResolution": false,
    "hiddenSeries": undefined,
    "hideTooltip": undefined,
    "id": "series v2",
    "isOutsideRange": undefined,
    "label": "series v2",
    "legend": true,
    "lines": undefined,
    "nullPointMode": undefined,
    "points": undefined,
    "stack": undefined,
    "stats": {},
    "transform": undefined,
    "unit": undefined,
    "valueFormater": [Function],
    "yaxis": undefined,
    "zindex": undefined,
  },
  TimeSeries {
    "alias": "series with time as strings v1",
    "aliasEscaped": "series with time as strings v1",
    "allIsNull": undefined,
    "allIsZero": undefined,
    "bars": {
      "fillColor": "#1F78C1",
    },
    "color": "#1F78C1",
    "dashes": undefined,
    "dataFrameIndex": 3,
    "datapoints": [
      [
        0.1,
        1609462800000,
      ],
      [
        0.2,
        1609462800000,
      ],
      [
        0.3,
        1609466400000,
      ],
    ],
    "decimals": undefined,
    "fieldIndex": 0,
    "fillBelowTo": undefined,
    "flotpairs": undefined,
    "hasMsResolution": false,
    "hiddenSeries": undefined,
    "hideTooltip": undefined,
    "id": "series with time as strings v1",
    "isOutsideRange": undefined,
    "label": "series with time as strings v1",
    "legend": true,
    "lines": undefined,
    "nullPointMode": undefined,
    "points": undefined,
    "stack": undefined,
    "stats": {},
    "transform": undefined,
    "unit": undefined,
    "valueFormater": [Function],
    "yaxis": undefined,
    "zindex": undefined,
  },
]
`;

exports[`Graph DataProcessor getTimeSeries from LegacyResponseData Should return single histogram 1`] = `
[
  TimeSeries {
    "alias": "Count",
    "aliasEscaped": "Count",
    "allIsNull": undefined,
    "allIsZero": undefined,
    "bars": {
      "fillColor": "#7EB26D",
    },
    "color": "#7EB26D",
    "dashes": undefined,
    "dataFrameIndex": 0,
    "datapoints": [
      [
        1,
        1001,
      ],
      [
        2,
        1002,
      ],
      [
        3,
        1003,
      ],
      [
        0.1,
        1001,
      ],
      [
        0.2,
        1002,
      ],
      [
        0.3,
        1003,
      ],
      [
        1.1,
        1001,
      ],
      [
        2.2,
        1002,
      ],
      [
        3.3,
        1003,
      ],
      [
        0.1,
        1001,
      ],
      [
        0.2,
        1002,
      ],
      [
        0.3,
        1003,
      ],
      [
        1.1,
        1001,
      ],
      [
        2.2,
        1002,
      ],
      [
        3.3,
        1003,
      ],
      [
        0.1,
        1609462800000,
      ],
      [
        0.2,
        1609462800000,
      ],
      [
        0.3,
        1609466400000,
      ],
    ],
    "decimals": undefined,
    "fieldIndex": 1,
    "fillBelowTo": undefined,
    "flotpairs": undefined,
    "hasMsResolution": false,
    "hiddenSeries": undefined,
    "hideTooltip": undefined,
    "id": "Value",
    "isOutsideRange": undefined,
    "label": "Value",
    "legend": true,
    "lines": undefined,
    "nullPointMode": undefined,
    "points": undefined,
    "stack": undefined,
    "stats": {},
    "transform": undefined,
    "unit": "watt",
    "valueFormater": [Function],
    "yaxis": undefined,
    "zindex": undefined,
  },
]
`;
